@@ -487,6 +487,14 @@ static void PSPTris_update_time()
 		}
 }
 
+void PSPTris_game_stop_classic()
+{
+	PSPTris_audio_free_sample(brick_drop_sample);
+	PSPTris_audio_free_sample(new_level_sample);
+	PSPTris_audio_free_sample(remove_lines_sample);
+	danzeff_free();
+}
+
 bool PSPTris_game_render_classic(u32 key_state, jsaTextureCache *mytcache)
 {
 bool	exit_game = false;
@@ -744,9 +752,7 @@ bool	exit_game = false;
 
 	if (exit_game)
 		{
-		PSPTris_audio_free_sample(brick_drop_sample);
-		PSPTris_audio_free_sample(new_level_sample);
-		PSPTris_audio_free_sample(remove_lines_sample);
+		PSPTris_game_stop_classic();
 		}
 
 	return exit_game;
